--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>DIHLONGIT</title>
+	<title>DINHLONGIT</title>
 </head>
 <body>
 	<h1>WELCOME TO MY WEBSITE</h1>
