--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<h1>WELCOME TO MY WEBSITE</h1>
 	<div class="thongtin"> 
 <b>Name: </b> <i> Nguyễn Đình Long</i>
-	</div>
+	</div> <br>
+	<img src="image/1.jpg" alt="">
 	<div class="thongtin">
 		<b>Birthday : </b> <i>08-01-1998</i>
 	</div>
