--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="menutop">
-		<nav class="navbar navbar-light bg-faded">
+		<nav class="navbar navbar-light bg-faded navbar-fixed-top">
 			<div class="container">
 			<a  class="navbar-brand" href="#"> <img src="image/logo.png" alt=""> </a>
 			<ul class="nav navbar-nav">
@@ -32,7 +32,17 @@
 			</ul>
 		</div>
 		</nav>
-		</div>
- 
+		</div> <!--het menu-->
+
+ <div class="khoitt1">
+ 	<div class="container-text-xs-center">
+ 		<div class="tt">
+ 		<img class="avatar" src="image/avatar.jpg" alt="DinhLongIT - BKDN">
+ 		<h3>I'm DinhLongIT</h3>
+ 		<a href="https://www.facebook.com/dinhlongit" class="nuthire btn btn-primary">CONTACH</a>
+ 	</div>
+ 	</div>
+ 	
+ </div>
 </body>
 </html>
