--- a/index.html
+++ b/index.html
@@ -85,10 +85,20 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#top">TRANG CHỦ</a></li>					
 						<li><a href="#video">VỀ HUẾ</a></li>
-						<li><a href="#about">THÔNG TIN SỰ KIỆN</a></li>
-   
+
+						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">THÔNG TIN SỰ KIỆN <span class="caret"></span> </a>
+							<ul class="dropdown-menu">
+							  <li><a href="#">THÔNG TIN CHUNG</a></li>
+							  <li><a href="#">QUY ĐỊNH VÀ ĐIỀU LỆ</a></li>
+							  <li><a href="#">BẢN ĐỒ</a></li>
+							</ul>
+						  </li>
+
+<!-- <li><a href="#about">THÔNG TIN SỰ KIỆN</a></li> -->
+
 						
-						<li><a href="https://www.huemarathon.com/form_2019.php">ĐĂNG KÝ</a></li>
+						<li><a href="#form_2019.php">ĐĂNG KÝ</a>
+						</li>
 						<li><a href="#portfolio">ĐỐI TÁC</a></li>
 						<li><a href="#contact">LIÊN HỆ</a></li>	
 						<li class="btn btn-info btn-sm"><a href="https://www.huemarathon.com/form_2019.php">ĐĂNG KÝ</a></li>
@@ -263,7 +273,7 @@
     					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"> <span>GALLERY HUẾ HALF MARATHON</span> 2019</h2>
 					</div>
 					<div class="row">
-    				<div class="col-md-4 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
+    				<div class="col-md-4 col-sm-4 col-xs-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
     					<div class="giainhi" align="center">
     					<img  class="img-responsive" src="images/Hue-Marathon-3.jpg" ></img>
 						</div>
@@ -277,7 +287,7 @@
     					<h4 align="center">NGƯỜI HUẾ VÀ NIỀM ĐAM MÊ CHẠY BỘ</h4>
     					
     				</div>
-    				<div class="col-md-4 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
+    				<div class="col-md-4 col-sm-4 col-xs-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
     					<div  class="giaiba" align="center">
     					<img class="img-responsive" src="images/Hue-Marathon-3.jpg" ></img>
 						</div>
@@ -437,7 +447,7 @@
 				<div class="lienhe">
     			<div class="row">
     				<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">LIÊN HỆ <span> HUE MARATHON 2019</span></h2>
+    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">LIÊN HỆ HUE MARATHON 2019</h2>
     				</div>
     				<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
     					<form action="#" method="post">
