--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#top">TRANG CHỦ</a></li>					
 						<li><a href="#video">VỀ HUẾ</a></li>
-						<li><a href="../thong-tin-su-kien.html#thongtinsukien">THÔNG TIN SỰ KIỆN</a></li>
+						<li><a href="https://dinhlongit.github.io/thong-tin-su-kien.html#thongtinsukien">THÔNG TIN SỰ KIỆN</a></li>
 						<!--
 						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">THÔNG TIN SỰ KIỆN <span class="caret"></span> </a>
 							<ul class="dropdown-menu">
@@ -175,7 +175,7 @@
 					<div class="item">
 					  <img src="images/banner2.png" alt="Hue Marathon 2019" style="width:100%;">
 					  <div class="carousel-caption">
-							<a data-scroll href="/thong-tin-su-kien.html#thongtinsukien" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">THÔNG TIN SỰ KIỆN</a>
+							<a data-scroll href="https://dinhlongit.github.io/thong-tin-su-kien.html#thongtinsukien" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">THÔNG TIN SỰ KIỆN</a>
 					  </div>
 					</div>	
 								  							
