--- a/index.html
+++ b/index.html
@@ -243,6 +243,24 @@
 
 				<section id="about">
 						<div class="container-fluid">
+    <div class="row">
+		<div class="col-md-4 col-sm-4 col-xs-4">
+				<div align="center" class="btndk1" >
+						<a class="btn btn-danger" href="https://www.huemarathon.com/form_2019.php">ĐĂNG KÝ NGAY</a>
+						</div>
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-4">
+				<div align="center" class="btndk2" >
+						<a class="btn btn-danger" href="https://www.huemarathon.com/form_2019.php">ĐĂNG KÝ NGAY</a>
+						</div>
+			</div>
+			<div class="col-md-4 col-sm-4 col-xs-4">
+					<div align="center" class="btndk3" >
+							<a class="btn btn-danger" href="https://www.huemarathon.com/form_2019.php">ĐĂNG KÝ NGAY</a>
+							</div>
+				</div>
+
+	</div>
 					</div>
 					
 		</section>
