--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 					<div class="row">
     				<div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img 2">
+                           <img src="images/ntr_1.jpg" class="img-responsive" alt="portfolio img 2">
                                 <div class="portfolio-overlay">
                                     <h4>FLY ADS</h4>
                                     <p>Nhà tài trợ</p>
@@ -435,7 +435,7 @@
 					
     				<div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img 2">
+                           <img src="images/ntr_2.jpg" class="img-responsive" alt="portfolio img 2">
                                 <div class="portfolio-overlay">
                                     <h4>FLY ADS</h4>
                                     <p>Nhà tài trợ</p>
@@ -446,7 +446,7 @@
 				
                     <div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img 3">
+                           <img src="images/ntr_3.jpg" class="img-responsive" alt="portfolio img 3">
                                 <div class="portfolio-overlay">
                                     <h4>CAO ĐẲNG CÔNG NGHIỆP HUẾ</h4>
                                     <p>Nhà tài trợ</p>
@@ -456,7 +456,7 @@
                     </div>
                     <div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 4">
+                           <img src="images/ntr_4.jpg" class="img-responsive" alt="portfolio img 4">
                                 <div class="portfolio-overlay">
                                     <h4>NHÃN HÀNG THE PIZZA</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -466,7 +466,7 @@
                     </div>
                     <div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img 3">
+                           <img src="images/ntr_5.jpg" class="img-responsive" alt="portfolio img 3">
                                 <div class="portfolio-overlay">
                                     <h4>Project Five</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -476,7 +476,7 @@
                     </div>
                     <div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 4">
+                           <img src="images/ntr_6.jpg" class="img-responsive" alt="portfolio img 4">
                                 <div class="portfolio-overlay">
                                     <h4>Project Six</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -488,7 +488,7 @@
 				<div class="row">
                     <div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img 1">
+                           <img src="images/ntr_7.jpg" class="img-responsive" alt="portfolio img 1">
                                 <div class="portfolio-overlay">
                                     <h4>Project Seven</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -508,7 +508,7 @@
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
 							<div class="portfolio-thumb">
-							   <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 2">
+							   <img src="images/ntr_8.jpg" class="img-responsive" alt="portfolio img 2">
 									<div class="portfolio-overlay">
 										<h4>Project Eight</h4>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -518,7 +518,7 @@
 						</div>
 						<div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
 								<div class="portfolio-thumb">
-								   <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 2">
+								   <img src="images/ntr_9.jpg" class="img-responsive" alt="portfolio img 2">
 										<div class="portfolio-overlay">
 											<h4>Project Eight</h4>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -528,7 +528,7 @@
 							</div>
 							<div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
 									<div class="portfolio-thumb">
-									   <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 2">
+									   <img src="images/ntr_10.jpg" class="img-responsive" alt="portfolio img 2">
 											<div class="portfolio-overlay">
 												<h4>Project Eight</h4>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -538,7 +538,7 @@
 								</div>
 								<div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
 										<div class="portfolio-thumb">
-										   <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 2">
+										   <img src="images/ntr_11.jpg" class="img-responsive" alt="portfolio img 2">
 												<div class="portfolio-overlay">
 													<h4>Project Eight</h4>
 													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
