--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     						<img src="images/member-3.jpg" class="img-responsive" alt="team img 3">
     							<div class="team-des">
     								<h4>ĐƯỜNG CHẠY 21KM</h4>
-    								<span>Đường chạy trung bình, bước đệm cho cuộc đua Half Marathon.</span>
+    								<span>Đường chạy ưa chuộng của những người đam mê chạy đường dài.</span>
     								
     							</div>
 								<div class="btndk" >
@@ -359,8 +359,9 @@
 	<div class="col-md-12 col-sm-10 col-xs-10">
 		<!-- Card -->
 		<div class="ticket-student mt-5">
-				<div class="student-title"> Giảm giá 50% cho học sinh, sinh viên.</div>
-				<div class="student-price">Giảm giá 10% cho nhóm đăng ký trên 15 người.</div>
+				<div class="student-title"> Giảm giá 50% cho học sinh, sinh viên!</div>
+				<div class="student-price">Giảm giá 10% cho nhóm đăng ký trên 15 người!</div>
+				<div class="student-price1">Nhóm trên 30 người: Vui lòng liên hệ để được ưu đãi tốt nhất!</div>
 			  </div>
 			  
   </div>
