--- a/thong-tin-su-kien.html
+++ b/thong-tin-su-kien.html
@@ -292,7 +292,7 @@
 												<td>289.000</td>		
 												<td>589.000</td>	
 												<td>789.000</td>		
-												<td ><div  class="btn btn-warning"></div>	</td>				
+												<td ><div  class="btn btn-warning"></div>ĐĂNG KÝ	</td>				
 											  </tr>
 											  <tr>
 												<th scope="row">STANDARD</th>
