--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 			</div>
 			</div>
 			<div class="timerphai">
-					<p class="xemthem"> <i class="fa fa-angle-double-right"></i> <a href="#"> XEM THÊM </a></p>
+					<p class="xemthem"> <i class="fa fa-angle-double-right"></i> <a href="https://dinhlongit.github.io/thong-tin-su-kien.html#thongtinsukien"> XEM THÊM </a></p>
 					
 			</div>
 		</div>
