--- a/thong-tin-su-kien.html
+++ b/thong-tin-su-kien.html
@@ -587,6 +587,237 @@
 
 
     <div id="menu3" class="tab-pane fade">
+	<div class="giai">
+	<div class="giainhat">
+	 <h3 align="center">DANH MỤC GIẢI THƯỞNG</h3>
+	
+	 <h4 align="center">
+			---HUẾ HAFL MARATHON 2019---
+	 </h4>
+	 <h4 align="center">
+			29/09/2019
+	 </h4>
+	</div>
+	</div>
+	<br>
+	
+	<div class="static_block">
+	
+		
+	
+	<h3> I. GIẢI THƯỞNG HẠNG MỤC CÁ NHÂN </h3>
+	
+	 <table class="table table-striped">
+		
+		<thead>
+		  <tr>
+			<th scope="col">GIẢI </th>
+			<th scope="col">5KM</th>
+			<th scope="col">10KM</th>
+			<th scope="col">21KM</th>
+
+		  </tr>
+		</thead>
+		<tbody>
+		  <tr>
+			<th scope="row">Nhất Nam </th>
+			<td>	1.000.000 + certificate + trophy + hiện vật trị giá 1.000.000đ
+</td>
+			<td>2.000.000đ+ certificate + trophy + hiện vật trị giá 2.000.000đ
+</td>
+			<td>3.000.000đ+ certificate + trophy + hiện vật trị giá 3.000.000đ
+</td>
+
+		  </tr>
+		  <tr>
+			<th scope="row">Nhất Nữ
+</th>
+			<td>1.000.000 + certificate + trophy + hiện vật trị giá 1.000.000đ
+</td>
+			<td>2.000.000đ+ certificate + trophy + hiện vật trị giá 2.000.000đ
+</td>
+		<td>3.000.000đ+ certificate + trophy + hiện vật trị giá 3.000.000đ
+</td>
+
+		
+		  </tr>
+		  <tr>
+			<th scope="row">Nhì Nam
+</th>
+			<td>500.000 + certificate + trophy + hiện vật trị giá 500.000đ
+</td>
+			<td>1.000.000đ+ certificate + trophy + hiện vật trị giá 500.000đ
+</td>
+			<td>2.000.000đ+ certificate + trophy + hiện vật trị giá 1.000.000đ
+</td>
+		  </tr>
+		  <tr>
+				<th scope="row">Nhì Nữ
+</th>
+				<td>500.000 + certificate + trophy + hiện vật trị giá 500.000đ
+</td>
+				<td>1.000.000đ+ certificate + trophy + hiện vật trị giá 500.000đ
+</td>
+				<td>2.000.000đ+ certificate + trophy + hiện vật trị giá 1.000.000đ
+</td>
+			  </tr>
+
+			  <tr>
+					<th scope="row">Ba Nam
+</th>
+					<td>250.000 + certificate + trophy + hiện vật trị giá 500.000đ
+
+</td>
+					<td>500.000đ+ certificate + trophy + hiện vật trị giá 500.000đ
+<</td>
+					<td>1.000.000đ+ certificate + trophy + hiện vật trị giá 1.000.000đ
+<</td>
+				  </tr>
+				  
+				  		<th scope="row">Ba Nữ
+
+</th>
+					<td>250.000 + certificate + trophy + hiện vật trị giá 500.000đ
+</td>
+					<td>500.000đ+ certificate + trophy + hiện vật trị giá 500.000đ
+
+</td>
+					<td>1.000.000đ+ certificate + trophy + hiện vật trị giá 1.000.000đ
+
+</td>
+				  </tr>
+			
+	
+
+		</tbody>
+	  </table>
+	  
+	  
+	  <br>
+	  
+	  <h3> I. GIẢI THƯỞNG THEO ĐỘ TUỔI (TROPHY) </h3>
+	
+	 <table class="table table-striped">
+		
+		<thead>
+		  <tr>
+			<th scope="col">5KM ( NAM - NỮ )</th>
+			<th scope="col">10KM ( NAM - NỮ )</th>
+			<th scope="col">21KM ( NAM - NỮ )</th>
+
+		  </tr>
+		</thead>
+		<tbody>
+		  <tr>
+			<td scope="row">Dưới 10t	
+ </td>
+			<td>	Dưới 20t	
+ </td>
+			<td>Dưới 30t	
+
+</td>
+
+
+		  </tr>
+		   <tr>
+			<td scope="row">10t-19t	
+	
+ </td>
+			<td>	20t-29t	
+	
+ </td>
+			<td>30t-39t	
+
+
+</td>
+
+
+		  </tr>
+		  <tr>
+			<td scope="row">20t-29t	
+	
+ </td>
+			<td>	30t-39t	
+	
+ </td>
+			<td>40t-49t	
+	
+
+</td>
+
+
+		  </tr>
+		  <tr>
+			<td scope="row">30t-39t	
+
+ </td>
+			<td>	40t-49t	
+	
+ </td>
+			<td>50t-59t	
+	
+
+</td>
+
+
+		  </tr>
+		  <tr>
+			<td scope="row">40t-49t	
+	
+ </td>
+			<td>	50t-59t	
+	
+ </td>
+			<td>Trên 60t	
+
+
+</td>
+
+
+		  </tr>
+		  <tr>
+			<td scope="row">50t-59t	
+	
+ </td>
+			<td>	Trên 60t	
+	
+ </td>
+			<td>	
+
+</td>
+
+
+		  </tr>
+		  <tr>
+			<td scope="row">Trên 60t	
+	
+ </td>
+			<td>	
+ </td>
+			<td>
+
+</td>
+
+
+		  </tr>
+			
+	
+
+		</tbody>
+	  </table>
+	  <br>
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  </div>
+	
 		<div class="giai">
 	<div class="giainhat">
 	 <h3 align="center">Trao giải</h3>
