--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>HUE MARATHON</title>
+		<title>HUE HAFL MARATHON</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -388,7 +388,7 @@
     					<div class="giainhi" align="center">
     					<img  class="img-responsive" src="images/Hue-Marathon-3.jpg" ></img>
 						</div>
-    					<h4  align="center">GIẢI CHẠY HUẾ MARATHON CHÍNH THỨC KHỞI ĐỘNG</h4>
+    					<h4  align="center">GIẢI CHẠY HUẾ HAFL MARATHON CHÍNH THỨC KHỞI ĐỘNG</h4>
     					
     				</div>
     				<div class="col-md-4 col-sm-4 col-xs-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">
@@ -402,7 +402,7 @@
     					<div  class="giaiba" align="center">
     					<img class="img-responsive" src="images/Hue-Marathon-3.jpg" ></img>
 						</div>
-    					<h4  align="center"> HƠN 1.300 VẬN ĐỘNG VIÊN THAM GIA CUỘC THI HUẾ MARATHON 2019</h4>
+    					<h4  align="center"> HƠN 1.300 VẬN ĐỘNG VIÊN THAM GIA CUỘC THI HUẾ HALF MARATHON 2019</h4>
     					
 					</div>
 				</div>
@@ -419,7 +419,7 @@
     			<div class="row">
 						<div class="background_center">
     				<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>NHÀ TÀI TRỢ VÀ ĐỐI TÁC CỦA HUE MARATHON</span></h2>
+    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>NHÀ TÀI TRỢ VÀ ĐỐI TÁC CỦA HUE HALF MARATHON</span></h2>
 					</div>
 					<div class="row">
     				<div class="col-md-2 col-sm-4 col-xs-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
