--- a/thong-tin-su-kien.html
+++ b/thong-tin-su-kien.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>HUE MARATHON</title>
+		<title>HUE HAFL MARATHON</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -275,7 +275,7 @@
 											</thead>
 											<tbody>
 											  <tr>
-												<th scope="row">EB </th>
+												<th scope="row">EARLYBIRD </th>
 												<td>289.000</td>		
 												<td>589.000</td>	
 												<td>789.000</td>		
@@ -334,12 +334,12 @@
 							<img class="img-responsive" src="images/khoidong.jpg" alt="Khai mạc huế marathon 2019">
 						</div>
 						<p align="center">Các VDV khởi động trước cuộc đua</p>
-						<b><strong>2. Thông tin chi tiết về giải Hue Marathon 2019 : </strong></b>
+						<b><strong>2. Thông tin chi tiết về giải Hue Haft Marathon 2019 : </strong></b>
 						<ul>
 								<li>Thời gian: 29/09/2019.</li>												
 								<li>Địa điểm: Quảng trường Ngọ Môn,Thành phố Huế, Thừa Thiên Huế, Việt Nam.</li>
 								<li>Cự li: 5-10-21 km.</li>
-								<li>Website: https://www.huemarathon.com</li>
+								<li>Webebsite: https://www.huemarathon.com</li>
 								
 							</ul>
 							<br>
@@ -377,14 +377,14 @@
 					<div class="tab-content">
 					  <div id="trangchu1" class="container tab-pane active">
 
-				<a href="images/5KMmap.png" class="td-modal-image"><img class="img-responsive" src="images/5KMmap.png" alt="Giải chạy Hue Marathon 2019 chính thức khởi động!" title="Hue Marathon-0"> </a>
+				<a href="images/5KMmap.png" class="td-modal-image"><img class="img-responsive" src="images/5KMmap.png" alt="Giải chạy Hue Marathon Haft 2019 chính thức khởi động!" title="Hue Marathon-0"> </a>
 			
 			</div> 
 					  <div id="trangchu2" class="container tab-pane fade"><br>
 						<a href="images/10KMmap.png" class="td-modal-image"><img class="img-responsive" src="images/10KMmap.png" alt="Giải chạy Hue Marathon 2019 chính thức khởi động!" title="Hue Marathon-0"> </a>
 					  </div>
 					  <div id="trangchu3" class="container tab-pane fade"><br>
-						<a href="images/21KMmap.png" class="td-modal-image"><img class="img-responsive" src="images/21KMmap.png" alt="Giải chạy Hue Marathon 2019 chính thức khởi động!" title="Hue Marathon-0"> </a>
+						<a href="images/21KMmap.png" class="td-modal-image"><img class="img-responsive" src="images/21KMmap.png" alt="Giải chạy Hue Haft Marathon 2019 chính thức khởi động!" title="Hue Marathon-0"> </a>
 					  </div>
 					
 		</div>
@@ -409,7 +409,7 @@
 					</thead>
 					<tbody>
 					  <tr>
-						<th scope="row">8:30 AM – 8:00 PM</th>
+						<th scope="row">8:00 AM – 5:00 PM</th>
 						<td>VĐV nhận số hiệu chạy</td>
 		
 					  </tr>
@@ -1148,7 +1148,7 @@
 				<div class="lienhe">
     			<div class="row">
     				<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">LIÊN HỆ HUE MARATHON 2019</h2>
+    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">LIÊN HỆ HUE HAFL MARATHON 2019</h2>
     				</div>
     				<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
     					<form action="#" method="post">
