--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 				<div class="lienhe">
     			<div class="row">
     				<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">LIÊN HỆ Hue Half Marathon
+    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">LIÊN HỆ HUE HAFL MARATHON 2019
 							</h2>
     				</div>
     				<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
