--- a/dangkymarathonhue2019.html
+++ b/dangkymarathonhue2019.html
@@ -439,14 +439,14 @@ checkvalid = 0;
 <a id="back-to-top" href="#" class="back-to-top hvr-float" role="button" title="Click để lên đầu trang" style="display: none;"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="js/jquery-3.2.1.min.js"></script> 
-<script type="text/javascript" src="js/slick.min.js"></script>
-<script type="text/javascript" src="js/direction-aware.js"></script>
-<script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
-<script type="text/javascript" src="js/jquery.easeScroll.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/direction-aware.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/jquery.easeScroll.js"></script>
 <script src="js/popper.js"></script>
 <script src="js/bootstrap-material-design.js"></script>
 <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
-<script type="text/javascript" src="js/custom-2019.js"></script>	
+<script src="js/custom-2019.js"></script>	
 
 </body>
 </html>
