--- a/dangkymarathonhue2019.html
+++ b/dangkymarathonhue2019.html
@@ -2,11 +2,12 @@
 <!doctype html>
 <html lang="vi" xmlns:fb="http://ogp.me/ns/fb#"> 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Hue Marathon 2019">
-  <title>HUE MARATHON</title>
+    <meta charset="utf-8">
+		<title>HUE HALF MARATHON</title>
+		<meta name="keywords" content="Hue Half Marathon 2019">
+		<meta name="description" content="Hue Half Marathon 2019">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" href="img/hue_fav_icon.png" type="image/gif" sizes="16x16"> -->
   <link rel="stylesheet" href="css/bootstrap-material-design.min.css">
   <link rel="stylesheet" type="text/css" href="css/fontawesome-v5-all.css">
