--- a/en/thong-tin-su-kien.html
+++ b/en/thong-tin-su-kien.html
@@ -300,61 +300,32 @@
 												<th scope="col">GÓI CHẠY 		</th>
 												<th scope="col">5KM </th>
 												<th scope="col">10KM</th>
-												<th scope="col">Half Marathon</th>	
+												<th scope="col">21KM</th>	
 												<th scope="col">ĐĂNG KÝ</th>								
 										  </tr>
 											</thead>
 											<tbody>
-													<tr>
-															<th scope="row">RACE-KIT</th>
-															<td>BIB
-																<br>
-																Race-Guide
-																<br>
-																Running Shirt
-																<br>
-																*Finish Medal
-															</td>		
-															<td>BIB
-																	<br>
-																	Race-Guide
-																	<br>
-																	Running Shirt
-																	<br>
-																	*Finish Medal
-																</td>
-																<td>BIB
-																		<br>
-																		Race-Guide
-																		<br>
-																		Running Shirt
-																		<br>
-																		*Finish Medal
-																	</td>			
-															<td ><div  class="btn btn-warning"><a href="./dangkymarathonhue2019.html">ĐĂNG KÝ</a></div>	</td>				
-														  </tr>
 											  <tr>
-												<th scope="row">EARLYBIRD ( 07/07/2019 - 14/07/2019	)
-												</th>
+												<th scope="row">EARLYBIRD </th>
 												<td>289.000</td>		
 												<td>589.000</td>	
 												<td>789.000</td>		
 												<td ><div  class="btn btn-warning"><a href="./dangkymarathonhue2019.html">ĐĂNG KÝ</a></div>	</td>				
 											  </tr>
 											  <tr>
-												<th scope="row">STANDARD ( 15/07/2019 - 31/08/2019 )</th>
+												<th scope="row">STANDARD</th>
 												<td>389.000</td>		
 												<td>789.000</td>	
 												<td>989.000</td>	
 												<td ><div  class="btn btn-warning"><a href="./dangkymarathonhue2019.html">ĐĂNG KÝ</a></div>	</td>							
 											  </tr> <tr>
-												<th scope="row">LATE ( 01/09/2019 - 27/09/2019 )</th>
+												<th scope="row">LATE</th>
 												<td>489.000</td>		
 												<td>989.000</td>	
 												<td>1.189.000</td>	
 												<td ><div  class="btn btn-warning"><a href="./dangkymarathonhue2019.html">ĐĂNG KÝ</a></div>	</td>							
 											  </tr> <tr>
-												<th scope="row">ONSITE ( 28/09/2019 )</th>
+												<th scope="row">ONSITE</th>
 												<td>700.000</td>		
 												<td>1.200.000</td>	
 												<td>1.400.000</td>	
@@ -639,7 +610,7 @@
 	 <h3 align="center">DANH MỤC GIẢI THƯỞNG</h3>
 	
 	 <h4 align="center">
-			---HUẾ HALF MARATHON 2019---
+			---HUẾ HAFL MARATHON 2019---
 	 </h4>
 	 <h4 align="center">
 			29/09/2019
@@ -756,7 +727,7 @@
 		</thead>
 		<tbody>
 		  <tr>
-			<td scope="row">Dưới 20t	
+			<td scope="row">Dưới 10t	
  </td>
 			<td>	Dưới 20t	
  </td>
@@ -928,9 +899,9 @@
 
 		</tbody>
 	  </table>
-	  <p> Huy chương chỉ được trao khi vận động viên hoàn tất đường chạy trong khoảng thời gian quy định với 2 mốc cut-off time dành cho các cự ly 21KM và 10KM và 5KM.</p>
-	  
-	
+	  <p> Huy chương chỉ được trao khi vận động viên hoàn tất đường chạy trong khoảng thời gian quy định với 2 mốc cut-off time dành cho các cự ly 21KM và 10KM.</p>
+	  <p> Đối với vận động viên 10km: Huy chương sẽ được trao cho vận động viên hoàn thành đường chạy trong mốc cut-off time.</p>
+	  <p> Đối với người tham gia cự ly 5KM sẽ được trao huy chương chiến thắng khi hoàn thành đường chạy.</p>
 	  <h3>*CẦN MANG GÌ ĐỂ NHẬN RACE-KIT?</h3>
 	  <p>1. Email xác nhận (Chấp nhận bản điện tử)</p>
 	  <p>2. Giấy tờ tùy thân (Chứng minh thư/Passport/Thẻ tạm trú..)</p>
