--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		
     	<!-- start navigation -->
 		<nav class="navbar navbar-default">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="sr-only">Toggle navigation</span>
@@ -143,11 +143,11 @@
 						<span class="icon-bar"></span>
 					</button>
 					<div class="logo"></div>
-					<a  href="#top"><img class="navbar-brand" src="images/logo.png" alt="Marathon Hue 2019"></a>
+					<a  href="#top"><img class="navbar-brand" src="images/logofinal.png" alt="Marathon Hue 2019"></a>
 			
 				</div>
 				<div class="collapse navbar-collapse">
-					<ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav navbar-right	">
 						<li><a href="#top">TRANG CHỦ</a></li>					
 						<li><a href="./vehue.html">VỀ HUẾ</a></li>
 						<li><a href="./thong-tin-su-kien.html#thongtinsukien">THÔNG TIN SỰ KIỆN</a></li>
