--- a/en/event-info.html
+++ b/en/event-info.html
@@ -38,9 +38,12 @@
 							  { 
 					  if(data == 'false') 
 							  {
-								 alert('Chúng tôi sẽ phản hồi lại sớm nhất !');
+								 alert('Thank you! We will contach for you as soon as possible !');
 							  }else{
-								 alert('Chúng tôi sẽ phản hồi lại sớm nhất !');
+								$(document).ready(function(){
+$("#formlienhe")[0].reset();
+});
+								 alert('Thank you! We will contach for you as soon as possible !');
 							  }
 				   }
 		});
