--- a/en/index.html
+++ b/en/index.html
@@ -42,6 +42,9 @@ submit.click(function()
 				  { 
 		  if(data == 'false') 
 				  {
+					$(document).ready(function(){
+$("#formlienhe")[0].reset();
+});
 				
 					 alert('Thank you! We will contach for you as soon as possible !');
 					 
