--- a/thong-tin-su-kien.html
+++ b/thong-tin-su-kien.html
@@ -41,6 +41,9 @@
 								  {
 									 alert('Chúng tôi sẽ phản hồi lại sớm nhất !');
 								  }else{
+									$(document).ready(function(){
+$("#formlienhe")[0].reset();
+});
 									 alert('Chúng tôi sẽ phản hồi lại sớm nhất !');
 								  }
 					   }
