--- a/en/index.html
+++ b/en/index.html
@@ -370,7 +370,7 @@ return false;
 		<div class="col-md-12 col-sm-12 col-xs-12">
 			<!-- Card -->
 			<div class="ticket-student mt-5">
-					<div class="student-title"><b>NORMAL TICKER</b></div>
+					<div class="student-title"><b>NORMAL TICKET</b></div>
 					<div class="student-price">
 						<div class="btndk"><a class="btn btn-warning" href="https://bigtime.vn/hue-half-marathon-2019-4132?fbclid=IwAR2z2c0C7N5dMl87zY-lxs9fo3tDWVe9wo3eZN8b1Euqo5hKw3dEowrtUWs">REGISTER NOW</a></div>
 	
