--- a/en/event-info.html
+++ b/en/event-info.html
@@ -111,7 +111,7 @@ $("#formlienhe")[0].reset();
 
 	<!-- start header -->
 	<header>
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-8 col-sm-8 col-xs-8">
 						<ul class="language">
