--- a/en/index.html
+++ b/en/index.html
@@ -121,7 +121,7 @@ return false;
 
 <!-- start header -->
 <header>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-8 col-sm-8 col-xs-8">
 					<ul class="language">
