--- a/thong-tin-su-kien.html
+++ b/thong-tin-su-kien.html
@@ -283,7 +283,7 @@ $("#formlienhe")[0].reset();
 							<h4><u>Thời gian:</u><b> 29/09/2019 </b> </h4>
 							<h4><u>Địa điểm:</u><b> Quảng trường Ngọ Môn,Thành phố Huế, Thừa Thiên Huế, Việt Nam</b></h4>
 									<h4>	<u>Cự li:</u><b> 5-10-21km</b></h4>
-									<h4>	<u>Website:</u><b> https://www.huemarathon.com</b></h4>
+
 						
 					</div>
 <br>
@@ -372,7 +372,7 @@ $("#formlienhe")[0].reset();
 
 
 					<br>
-					<h3 align="center";> Giải chạy 🏃 Hue Marathon 2019 chính thức khởi động !</h3>
+					<h3 align="center";> Giải chạy 🏃 Hue Half Marathon 2019 chính thức khởi động !</h3>
 					<br>
 					<p>Sau những thành công từ giải Hue Half Marathon 2018, giải chạy bộ Hue Half Marathon 2019 tiếp tục bước vào khâu chuẩn bị với sự hoàn thiện và tiến bộ hơn so với mùa giải trước.</p>
 <br>
@@ -409,7 +409,7 @@ $("#formlienhe")[0].reset();
 							<b><strong>3. Nội Dung : </strong></b>
 							<br>
 							<p>Hue Half Marathon 2019 có 3 nội dung thi cho mọi người đăng kí tham gia là 5-10-21 km, dành cho những vận động viên chuyên nghiệp, giàu kinh nghiệm và cả những vận động viên nghiệp dư.</p>
-<p>Ngoài ra, cuộc thi sẽ được khai mạc vào thứ bảy ngày 28/09/2019 với nhiều hoạt động vui chơi thú vị, chuẩn bị cho một mùa giải thành công diễn ra vào ngày 29/09/2019.</p>
+<p>Giải tổ chức nhiều hoạt động và phát race kit vào thứ bảy ngày 28/09/2019 , và ngày race chính là vào ngày 29/09/2019.</p>
 <div align="center" class="newsimage">
 		<img class="img-responsive" src="images/ketthuc.jpg" alt="Khai mạc huế haft marathon 2019">
 	</div>
