--- a/en/event-info.html
+++ b/en/event-info.html
@@ -531,7 +531,7 @@ $("#formlienhe")[0].reset();
  <h3 align="center">LIST OF AWARDS</h3>
 
  <h4 align="center">
-		---HUẾ HALF MARATHON 2019---
+		---HUE HALF MARATHON 2019---
  </h4>
  <h4 align="center">
 		29/09/2019
@@ -575,7 +575,7 @@ certificate + trophy + gift 500.000đ</td><td>1,000,000đ&nbsp;+ certificate + t
 
 	  </tr>
 	   <tr>
-		<td scope="row">10-19 year-old</td>
+		
 		<td>	20 - 29 year-old</td>
 		<td>30 - 39t year-old</td>
 
