--- a/en/index.html
+++ b/en/index.html
@@ -425,7 +425,7 @@ return false;
 
 
 
-<!-- start service -->
+<!-- start service 
 <section id="service">
 	<div class="container">
 		<div class="row">
@@ -460,7 +460,7 @@ return false;
 		</div>
 	</div>
 </section>
-
+-->
 
 <!-- start portfolio -->
 <section id="portfolio">
