--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ $("#formlienhe")[0].reset();
 
 
 
-    	<!-- start service -->
+    	<!-- start service 
     	<section id="service">
     		<div class="container">
     			<div class="row">
@@ -494,7 +494,7 @@ $("#formlienhe")[0].reset();
     			</div>
     		</div>
     	</section>
-	
+	-->
 
     	<!-- start portfolio -->
     	<section id="portfolio">
