--- a/thong-tin-su-kien.html
+++ b/thong-tin-su-kien.html
@@ -549,7 +549,7 @@ $("#formlienhe")[0].reset();
 	 <h3 align="center">DANH MỤC GIẢI THƯỞNG</h3>
 	
 	 <h4 align="center">
-			---HUẾ HALF MARATHON 2019---
+			---HUE HALF MARATHON 2019---
 	 </h4>
 	 <h4 align="center">
 			29/09/2019
@@ -668,8 +668,7 @@ $("#formlienhe")[0].reset();
 		  <tr>
 			<td scope="row">Dưới 20t	
  </td>
-			<td>	Dưới 20t	
- </td>
+			
 			<td>Dưới 30t	
 
 </td>
@@ -838,13 +837,13 @@ $("#formlienhe")[0].reset();
 
 		</tbody>
 	  </table>
-	  <p> Huy chương chỉ được trao khi vận động viên hoàn tất đường chạy trong khoảng thời gian quy định với 2 mốc cut-off time dành cho các cự ly 21KM và 10KM và 5KM.</p>
+	  <p> Huy chương chỉ được trao khi vận động viên hoàn tất đường chạy trong khoảng thời gian quy định trước cut-off time dành cho các cự ly 21KM và 10KM và 5KM.</p>
 	  
 	
 	  <h3>*CẦN MANG GÌ ĐỂ NHẬN RACE-KIT?</h3>
 	  <p>1. Email xác nhận (Chấp nhận bản điện tử)</p>
 	  <p>2. Giấy tờ tùy thân (Chứng minh thư/Passport/Thẻ tạm trú..)</p>
-	  <p>* Để nhận bộ kit hộ, vui lòng mang theo 2 thông tin yêu cầu bên trên kèm theo giấy tờ tùy thân của người nhận hộ</p>
+	  
 	  <h3>*LƯU Ý CHUNG:</h3>
 	  <p>-  Xin vui lòng thông báo cho Ban tổ chức thông qua email huemarathon@gmail.com nếu bạn không thể đến để lấy bộ Race Kit.</p>
 			<p>- Chúng tôi sẽ cố gắng hết sức để cung cấp cho tất cả các vận động viên T-shirt đúng kích cỡ, nhưng trong trường hợp kích cỡ của bạn không còn, xin vui lòng chọn một kích cỡ khác.</p>
