--- a/thong-tin-su-kien.html
+++ b/thong-tin-su-kien.html
@@ -112,7 +112,7 @@ $("#formlienhe")[0].reset();
 
         <!-- start header -->
         <header>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-8 col-sm-8 col-xs-8">
 							<ul class="language">
@@ -669,14 +669,14 @@ $("#formlienhe")[0].reset();
 			<td scope="row">Dưới 20t	
  </td>
 			
-			<td>Dưới 30t	
+			<td>Dưới 30t	</td>
+			<td>Dưới 30t	</td>
 
-</td>
 
 
 		  </tr>
 		   <tr>
-			<td scope="row">10t-19t	
+			<td scope="row">	
 	
  </td>
 			<td>	20t-29t	
